--- a/src/style.css
+++ b/src/style.css
@@ -542,7 +542,7 @@ body{
   height: 650px;
   margin: 0 auto;
   background-color: var(--color-white);
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px,rgba(60, 64, 67, 0.15) 1px 0px 3px 1px  ;
+  border: 2px solid rgba(0, 0, 0, 0.12);
   margin-top: 40px;
   border-radius: 1.8rem;
 }
