--- a/src/pages/login-page/login.css
+++ b/src/pages/login-page/login.css
@@ -32,7 +32,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    text-decoration: none;
     outline: none;
 }
 
@@ -49,7 +48,7 @@ body{
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    margin-top: 102px;
+    margin-top: 88px;
 }
 
 .login__container .logo{
@@ -111,4 +110,31 @@ body{
     font-weight: 400;
     font-size: 0.9rem;
     color: var(--link-color);
+    text-decoration:none;
+}
+
+.input2 .input__label a:hover{
+    text-decoration: underline;
+}
+
+.btn__signin{
+    margin-top: 36px;
+    width: 100%;
+
+}
+
+.btn__signin .btn{
+    width: 100%;
+    padding: 12px 16px;
+    border: none;
+    font-family: 'Mona Sans';
+    border-radius: 6px;
+    font-size: 1rem;
+    font-weight: 600;
+    color: white;
+    background-color: var(--color-blueDark);
+}
+
+.btn__signin .btn:hover{
+    background-color: var(--color-gray);
 }
