--- a/src/style.css
+++ b/src/style.css
@@ -152,7 +152,7 @@ body{
   color: white;
   display: flex;
   align-items: center;
-  font-weight: 600;
+  font-weight: 500;
   padding: 8px 32px;
   border-radius: 2.1em;
   -webkit-font-smoothing: antialiased;
@@ -172,7 +172,7 @@ body{
   font-size: 15px;
   background-color: var(--color-blueDark);
   color: white;
-  font-weight: 600;
+  font-weight: 500;
   padding: 8px 40px;
   border-radius: 2.1em;
   -webkit-font-smoothing: antialiased;
@@ -197,39 +197,37 @@ body{
 }
 
 .homepage .homepage__hero{
-  height: 100%;
-  padding: 0 64px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  height: 100%;
   width: 100%;
+  position: relative;
+  justify-content: center;
 }
 
 .homepage__hero__content{
   display: flex;
+  height: 500px;
+  width: 1600px;
   justify-content: center;
   flex-direction: column;
-  gap: 16px;
   align-items: center;
 }
 
 
 
 .homepage .homepage__title{
-  font-size: 140px;
-  font-family: 'Raleway', sans-serif;
-  line-height: 1;
-  letter-spacing: -1px;
-  gap: 24px;
+  font-size: 6rem;
+  font-family: 'Poppins', sans-serif;
   display: flex;
-  text-align: left;
+  font-weight: 400;
+  gap: 12px;
   color: var(--color-blueDark);
 }
 
 
 
 .homepage .homepage__title span{
-  font-size: 125px;
+  font-size: 6rem;
   align-self: center;
   background: linear-gradient(90deg, var(--color-blue),var(--color-green-aqua));
   font-family: 'Dancing Script', cursive;
@@ -237,62 +235,45 @@ body{
   -webkit-text-fill-color: transparent;
 }
 
-.homepage__info{
-  display: flex;
-  flex-direction: column;
-}
+
 .homepage .homepage__subtitle{
-  font-size: 1.5rem;
-  font-family: 'Poppins';
+  font-size: 1.225rem;
+  font-family: 'Mona Sans';
   font-weight: 400;
   color: var(--color-blueDark);
 }
 
 .homepage .homepage__button{
-  font-size: 1.5em;
-  font-weight: 600;
-  border-radius: 40px;
+  font-size: 1.2em;
+  margin-top: 26px;
+  font-weight: 500;
+  border-radius: 32px;
   background: var(--color-rose);
-  margin-top: 24px;
   color: var(--color-white);
   border: none;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  padding: 16px 2rem;
+  padding: 12px 24px;
   font-family: 'Mona Sans', sans-serif;
   color: var(--color-white);
-  box-shadow:
-    inset 0 1px 0 0 rgba(255,255,255,0.4),
-    0 2px 0 0 var(--color-rose),
-    0 4px 0 0 #FF1E50,
-    0 6px 0 0 #FF7A95,
-    0 8px 0 0 #FF6B88,
-    0 8px 16px 0 rgba(255, 77, 109, 0.5);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
 
-  will-change: transform, box-shadow; 
-  transition: transform .25s ease, box-shadow .25s ease;
+  will-change: background-color; 
+  transition: .15s ease;
 }
 
 .homepage .homepage__button:hover{
-  transform: translateY(4px);
-   box-shadow:
-    inset 0 1px 0 0 rgba(255,255,255,0.4),
-    0 1px 0 0 var(--color-rose),
-    0 2px 0 0 #FF1E50,
-    0 3px 0 0 #FF7A95,
-    0 4px 0 0 #FF6B88,
-    0 4px 8px 0 rgba(255,77,109,0.5);
+  background-color: var(--color-gray);
 }
 
 
 
 .features{
-  height: 120vh;
+  height: 100vh;
 }
 
 .features__header{
@@ -300,24 +281,28 @@ body{
   display: flex;
   flex-direction: column;
   gap: 16px;
+  font-weight: 500;
 }
 
 .features__header .features__title{
   font-size: 56px;
-  font-family: 'Raleway', sans-serif;
-  color: var(--color-blueDark);
-}
-
-.features__header .features__subtitle{
-  font-size: 18px;
   font-family: 'Poppins', sans-serif;
   color: var(--color-blueDark);
+  font-weight: 400;
+}
+
+.features__subtitle{
+  font-size: 22px;
+  font-family: 'Mona Sans';
+  font-weight:  400;
+  color: var(--color-blueDark2);
 }
 
 .features__header .features__label{
   font-size: 16px;
   font-family: 'Mona Sans', sans-serif;
   display: flex;
+  font-weight: 600;
   justify-content: center;
   position: relative;
   z-index: -1;
@@ -336,168 +321,12 @@ body{
 
 }
 
-.features__grid {
-  width: 1300px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); 
-  grid-auto-rows: 250px;
-  background: var(--color-blueDark);
-  border: 1px solid rgba(255,255,255,.5);
-  border-radius: 1.8em;
-  margin: 0 auto;
-  margin-top: 3rem;
-  gap: 1.8rem; 
-  padding: 32px;
-}
 
-.feature {
-  background-color: rgba(255,255,255,.1);
-  border: 1px solid rgba(255,255,255,.2);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
-  border-radius: 28px;
-  display: flex;               
-  color: white;
-  position: relative;
-  font-weight: bold;
-  overflow: hidden;
-}
-
-
-
-.feature::after{
-  content: '';
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  background-color: white;
-  width: 200px;
-  filter: blur(250px);
-  height: 200px;
-  border-radius: 50%;
-  z-index: 0;
-}
-
-
-.feature1{
-  grid-row: span 2; 
-  display: flex;
-  flex-direction: column;
-  padding: 32px 32px;
-  gap: 48px;
-}
-
-.feature1 img{
-  height: auto;
-  display: flex;
-  align-self: center;
-  justify-content: center;
-  width: 250px;
-}
-
-.feature2 img{
-  height: auto;
-  display: flex;
-  width: 250px;
-}
-
-.feature3 img{
-  height: auto;
-  display: flex;
-  position: absolute;
-  right: 20px;
-  bottom: 10px;
-  justify-content: center;
-  width: 125px;
-}
-
-.feature h3{
-  background: linear-gradient(90deg, var(--color-blue), var(--color-green-aqua));
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size: 2rem;
-  color: var(--color-white);
-  font-family: 'Poppins', sans-serif;
-}
-.feature p{
-  font-size: 1rem;
-  font-family: 'Poppins', sans-serif;
-  line-height: 1.4;
-  font-weight: 500;
-  color: var(--color-white);
-}
-
-.feature2{
-  grid-column: span 2; 
-  display: flex;
-}
-
-.feature2 .feature__info{
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  padding: 64px 32px;
-  width: 60%;
-}
-
-.feature3{
-  display: flex;
-  flex-direction: column;
-  padding: 16px 32px;
-}
-
-.feature4{
-  display: flex;
-  flex-direction: column;
-  padding: 16px 32px;
-}
-
-.feature4 img{
-  display: flex;
-  position: absolute;
-  top: -185%;
-  left: 50%;
-  transform: translate(-50%,185%);
-  width: 300px;
-}
-
-.feature5{
-  grid-column: span 2;
-  padding: 64px 32px;
-  gap: 32px;
-}
-
-.feature5 .feature__info{
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  width: 60%;
-}
-
-.feature5 img{
-  width: 250px;
-  height: 250px;
-  display: flex;
-  align-self: center;
-}
-
-.feature6{
-  display: flex;
-  flex-direction: column;
-  padding: 16px 32px;
-}
-
-.feature6 img{
-  height: auto;
-  width: 200px;
-  margin-top: 8px;
-  display: flex;
-  align-self: center;
-}
 
 
 
 .contact{
-  height: 120vh;
+  height: 100vh;
 }
 
 .contact__header{
@@ -509,7 +338,8 @@ body{
 
 .contact__header .contact__title{
   font-size: 56px;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
   color: var(--color-blueDark);
 }
 
@@ -517,7 +347,7 @@ body{
   font-size: 16px;
   font-family: 'Mona Sans', sans-serif;
   display: flex;
-  font-weight: bold;
+  font-weight: 600;
   justify-content: center;
   position: relative;
   z-index: -1;
