--- a/src/pages/login-page/login.css
+++ b/src/pages/login-page/login.css
@@ -66,8 +66,8 @@ body{
 
 .login__container .logo h1{
     font-size: 1.25rem;
-    font-family: 'Mona Sans';
-    font-weight: 500;
+    font-family: 'Poppins';
+    font-weight: 600;
     color: var(--color-blueDark);
 }
 
@@ -97,7 +97,7 @@ body{
 
 .input .input__label{
     font-family: 'Mona Sans';
-    font-weight: 500;
+    font-weight: 600;
     font-size: 14px;
 }
 
@@ -119,7 +119,6 @@ body{
 
 .btn__signin{
     margin-top: 36px;
-    width: 100%;
 
 }
 
@@ -130,6 +129,7 @@ body{
     font-family: 'Mona Sans';
     border-radius: 6px;
     font-size: 1rem;
+    font-weight: 500;
     font-weight: 600;
     color: white;
     background-color: var(--color-blueDark);
