--- a/src/style.css
+++ b/src/style.css
@@ -17,15 +17,14 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
-  outline: none;
   font-family: 'Dancing Script', cursive;
   outline: none;
 }
 
 :root {
   
-  --color-blue: #007BFF;
-  --color-blue2: #0000ff;       
+  --color-blue: #36ffff;
+  --color-blue2: #007bff;       
   --color-yellow: gold;     
   --color-blueDark: #0d0c22;
   --color-blueDark2: #0A091B;
@@ -64,16 +63,27 @@ body{
   align-items: center;
   position: fixed;
   background-color: var(--color-white);
-  gap: 35px;
+  gap: 33px;
   width: 100%;
   z-index: 999 !important;
   
 }
 
+.header__logo{
+  display:flex;
+  gap: 12px;
+
+}
+
+.header__logo img{
+  height: auto;
+  width: 28px;
+}
+
 
 .header__logo .header__title {
-  font-size: 2.5em;
-  background: linear-gradient(90deg, var(--color-blue), var(--color-green-aqua),var(--color-blue2));
+  font-size: 2.2em;
+  background: linear-gradient(70deg, var(--color-blue),var(--color-blue2));
   font-family: 'Dancing Script', cursive;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -114,16 +124,16 @@ body{
   position: relative;
 }
 
-.info a:hover{
-  color: #7b7194;
-}
+
 
 .info a::after{
   content: '';
   position: absolute;
   width: 0%;
+  left: 50%;
+  transform: translate(-50%,0%);
   height: 3px;
-  background-color: var(--color-gray);
+  background: linear-gradient(90deg,var(--color-blue),var(--color-blue2));
   bottom: -8px;
   border-radius: 8px;
   transition: width .25s ease;
@@ -153,6 +163,7 @@ body{
   display: flex;
   align-items: center;
   font-weight: 500;
+  box-shadow: inset 0 0 2px rgba(255,255,255,1);
   padding: 8px 32px;
   border-radius: 2.1em;
   -webkit-font-smoothing: antialiased;
@@ -173,6 +184,7 @@ body{
   background-color: var(--color-blueDark);
   color: white;
   font-weight: 500;
+  box-shadow: inset 0 0 2px rgba(255,255,255,1);
   padding: 8px 40px;
   border-radius: 2.1em;
   -webkit-font-smoothing: antialiased;
@@ -188,12 +200,9 @@ body{
 
 
 
- 
-
 
 .homepage{
   height: 100%;
-  display: relative;
 }
 
 .homepage .homepage__hero{
@@ -220,7 +229,7 @@ body{
   font-family: 'Poppins', sans-serif;
   display: flex;
   font-weight: 400;
-  gap: 12px;
+  gap: 16px;
   color: var(--color-blueDark);
 }
 
@@ -229,7 +238,7 @@ body{
 .homepage .homepage__title span{
   font-size: 6rem;
   align-self: center;
-  background: linear-gradient(90deg, var(--color-blue),var(--color-green-aqua));
+  background: linear-gradient(90deg, var(--color-blue),var(--color-blue2 ));
   font-family: 'Dancing Script', cursive;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -247,10 +256,14 @@ body{
   font-size: 1.2em;
   margin-top: 26px;
   font-weight: 500;
-  border-radius: 32px;
+  border-radius: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background: var(--color-rose);
   color: var(--color-white);
   border: none;
+  box-shadow: inset 0 0 2px rgba(255,255,255,1);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -258,6 +271,7 @@ body{
   padding: 12px 24px;
   font-family: 'Mona Sans', sans-serif;
   color: var(--color-white);
+  gap: 8px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
@@ -266,14 +280,17 @@ body{
   transition: .15s ease;
 }
 
-.homepage .homepage__button:hover{
-  background-color: var(--color-gray);
+.homepage .homepage__button img{
+  height: auto;
+  width: 20px;
 }
 
 
 
+
 .features{
-  height: 100vh;
+  height: 115vh;
+  position: relative;
 }
 
 .features__header{
@@ -321,12 +338,104 @@ body{
 
 }
 
+.features__container{
+  width: 100%;
+  margin-top: 32px;
+  height: 100%;
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  background-color: transparent;
+}
+
+.features__container .box__container{
+  height: 400px;
+  width: 100%;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+
+}
+
+
+
+.box__container .box1{
+  width: 800px;
+  height: 100%;
+  background-color: white;
+  box-shadow: 0 0 1.50px rgba(0, 0, 0, 1);
+  border-radius: 16px;
+}
+
+.box__container .box2{
+  width: 700px;
+  border-radius: 16px;
+  box-shadow: 0 0 1.50px rgba(0, 0, 0, 1);
+  height: 100%;
+  background-color: white;
+}
+
+
+.box__container .box3{
+  width: 700px;
+  height: 100%;
+  box-shadow: 0 0 1.50px rgba(0, 0, 0, 1);
+  background-color: white;
+  border-radius: 16px;
+}
+
+.box__container .box4{
+  width: 800px;
+  box-shadow: 0 0 1.50px rgba(0, 0, 0, 1);
+  border-radius: 16px;
+  height: 100%;
+
+}
+
+.box img{
+  height: 80%;
+  width: 50%;
+}
+
+.box{
+  display: flex;
+  align-items: center;
+}
+
+.box .box__content{
+  width: 50%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  gap: 8px;
+  padding-left: 1.5rem;
+}
+
+.box .box__content h1{
+  font-size:  48px;
+  font-family: 'Poppins';
+  font-weight: 400;
+}
+
+.box .box__content p{
+  font-size: 1.1rem;
+  font-family: 'Mona Sans';
+  font-weight: 500;
+}
+
+
+
+
 
 
 
 
 .contact{
-  height: 100vh;
+  height: 100%;
+  position: relative;
 }
 
 .contact__header{
@@ -403,11 +512,7 @@ body{
   height: 100%;
 }
 
-.contact__container .contact__title .title h1{
-  font-size: 4rem;
-  font-family: 'Poppins';
-  color: var(--color-blueDark);
-}
+
 
 .contact__container .contact__form{
   padding-top: 48px;
@@ -423,6 +528,7 @@ body{
   font-size: 48px;
   color: var(--color-blueDark);
   font-family: 'Poppins';
+  font-weight: 400;
   margin-bottom: 32px;
 }
 
@@ -526,7 +632,7 @@ body{
   border: none;
   outline: none;
   border-radius: 1.8rem;
-  font-weight: bold;
+  font-weight: 500;
   background-color: var(--color-blueDark);
   transition: .15s ease;
 }
