--- a/src/pages/login-page/login.css
+++ b/src/pages/login-page/login.css
@@ -119,6 +119,7 @@ body{
 
 .btn__signin{
     margin-top: 36px;
+    width: 100%;
 
 }
 
@@ -132,6 +133,8 @@ body{
     font-weight: 500;
     font-weight: 600;
     color: white;
+    transition: .25s ease;
+    box-shadow: inset 0 0 2px rgba(255,255,255,1);
     background-color: var(--color-blueDark);
 }
 
