--- a/src/pages/dashboard-page/style.css
+++ b/src/pages/dashboard-page/style.css
@@ -45,7 +45,7 @@ body{
 
 .logo__title h1{
     font-family: 'Dancing Script';
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     background: linear-gradient(70deg, var(--color-blue),var(--color-blue2));
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -61,6 +61,7 @@ body{
     background-color: white;
     border-right: 1px solid rgba(0,0,0,.1);
     padding: 24px 18px;
+    padding-right: 80px;
     display: flex;
     border-radius: 16px;
     flex-direction: column;
@@ -78,12 +79,12 @@ body{
 .sidebar ul li{
     display: flex;
     align-items: center;
-    gap: 16px;
+    gap: 8px;
 }
 
 .sidebar ul li span{
     font-weight: 500;
-    font-size: .9rem;
+    font-size: .8rem;
 }
 
 
