--- a/src/pages/dashboard-page/style.css
+++ b/src/pages/dashboard-page/style.css
@@ -34,40 +34,32 @@
 body{
     height: 100vh;
     overflow: hidden;
-    background-color: var(--background-color);
-}
-
-.logo__title{
+    background: var(--background-color);
+    z-index: -1 !important;
     display: flex;
     align-items: center;
-    gap: 8px;
+    padding: 40px;
 }
 
-.logo__title h1{
-    font-family: 'Dancing Script';
-    font-size: 1.6rem;
-    background: linear-gradient(70deg, var(--color-blue),var(--color-blue2));
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
 
-.sidebar__container{
-    display: flex;
-    height: 100%;
-    padding: 10px;
-}
 
 .sidebar{
-    background-color: white;
-    border-right: 1px solid rgba(0,0,0,.1);
-    padding: 24px 18px;
-    padding-right: 80px;
     display: flex;
+    position: relative;
     border-radius: 16px;
     flex-direction: column;
+    align-items: center;
+    padding: 40px 0;
     justify-content: space-between;
-    height: 100%;
+    overflow: hidden;
+    box-shadow: 0 0 4px rgba(0,0,0,.3);
+    width: 80px;
+    height: 80%;
+    background-color: var(--background-color);
+    z-index: 1;
 }
+
+
 
 .sidebar ul{
     display: flex;
@@ -79,7 +71,7 @@ body{
 .sidebar ul li{
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 16px;
 }
 
 .sidebar ul li span{
@@ -87,6 +79,32 @@ body{
     font-size: .8rem;
 }
 
+.sidebar ul li img{
+    filter: invert(70%);
+    position: relative;
+
+}
+
+.sidebar ul li img::after{
+    content: '';
+    position: absolute;
+    inset: -4px;
+    width: calc(100% + 8px);
+    height: calc(100% + 8px);
+    background-color: black;
+
+}
+
+.main__dashboard{
+    width: 100%;
+    height: 90vh;
+    border-radius: 24px;
+    position: relative;
+    right: 20px;
+    box-shadow: 0 0 4px rgba(0,0,0,.3);
+    background-color: var(--background-color);
+    z-index: -1;
+}
 
 
 
