--- a/src/style.css
+++ b/src/style.css
@@ -47,8 +47,8 @@ img {
   --color-green-aqua: #00EA9C;
   --color-electric-yellow: linear-gradient(90deg, #FFF700, #FFD000, #FFB300);
 
-  
-  --color-background: white;
+  --box-shadow: 0 1px 4px 4px rgba(0, 0, 0, .4);
+  --color-background: f9fafb;
   --color-primary: var(--color-blue);
   --color-button: var(--color-yellow);
   --color-success: var(--color-green);
@@ -371,14 +371,14 @@ body{
   width: 700px;
   height: 100%;
   background-color: white;
-  box-shadow: 0 0 1.50px rgba(0, 0, 0, 1);
+  box-shadow: var(--box-shadow);
   border-radius: 16px;
 }
 
 .box__container .box2{
   width: 700px;
   border-radius: 16px;
-  box-shadow: 0 0 1.50px rgba(0, 0, 0, 1);
+  box-shadow: var(--box-shadow);
   height: 100%;
   background-color: white;
 }
@@ -387,14 +387,14 @@ body{
 .box__container .box3{
   width: 700px;
   height: 100%;
-  box-shadow: 0 0 1.50px rgba(0, 0, 0, 1);
+  box-shadow: var(--box-shadow);
   background-color: white;
   border-radius: 16px;
 }
 
 .box__container .box4{
   width: 700px;
-  box-shadow: 0 0 1.50px rgba(0, 0, 0, 1);
+  box-shadow: var(--box-shadow);
   border-radius: 16px;
   height: 100%;
 
@@ -488,7 +488,7 @@ body{
   height: 650px;
   margin: 0 auto;
   background-color: var(--color-white);
-  box-shadow: 0 0 1.50px rgba(0, 0, 0, 1);
+  box-shadow: var(--box-shadow);
   margin-top: 40px;
   border-radius: 1.8rem;
 }
@@ -615,7 +615,8 @@ body{
   outline: none;
   gap: 24px;
   width: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.25);
+  border: none;
+  box-shadow: var(--box-shadow);
   color: var(--color-blueDark);
   font-size: 1rem;
   font-family: 'Mona Sans';
