--- a/src/pages/dashboard-page/style.css
+++ b/src/pages/dashboard-page/style.css
@@ -23,9 +23,11 @@
 }
 
 :root{
-    --background-color: #f9fafb;
+    --background-color: #cdc1ff;
     --purple-color: #fb17f8;
+    --color-rose: #FF6EC7;
     --yellow-color: #fdc70c;
+    --color-gray: #7b7194;
     --color-blueDark: #0d0c22;
     --color-blue: #36ffff;
     --color-blue2: #007bff;  
@@ -33,8 +35,7 @@
 
 body{
     height: 100vh;
-    overflow: hidden;
-    background: linear-gradient(135deg,rgba(253, 199, 12, .1),rgba(251, 23, 248, .1));
+    background: linear-gradient(135deg,rgba(251, 23, 248, .4),rgba(253, 199, 12, .4));
     z-index: -1 !important;
     display: flex;
     align-items: center;
@@ -49,52 +50,60 @@ body{
     border-radius: 16px;
     flex-direction: column;
     align-items: center;
-    padding: 40px 0;
     justify-content: space-between;
-    overflow: hidden;
-    box-shadow: 0 0 4px rgba(0,0,0,.3);
+    border: none;
+    background: white;
     width: 80px;
     height: 80%;
-    background-color: var(--background-color);
+    border: 1px solid rgba(0,0,0,.3);
+    position: relative;
     z-index: 1;
 }
 
 
 
+
 .sidebar ul{
+    padding-top: 50px;
+    padding-bottom: 50px;
     display: flex;
     flex-direction: column;
+    width: 100%;
+    align-items: center;
     gap: 32px;
     justify-content: center;
 }
 
-.sidebar ul li{
-    display: flex;
-    align-items: center;
-    gap: 16px;
-}
-
-.sidebar ul li span{
-    font-weight: 500;
-    font-size: .8rem;
-}
 
 .sidebar ul li{
-    background-color: white;
     padding: 10px;
     display: flex;
+    width: inherit;
     align-items: center;
     justify-content: center;
     border-radius: 8px;
+    position: relative;
     transition: .25s ease;
 }
 
-.sidebar ul li:hover{
-    background-color: rgba(0,0,0,.1);
+.sidebar ul li::after{
+    position: absolute;
+    content: '';
+    height: 75%;
+    width: 0px;
+    border-top-right-radius:  16px;
+    border-bottom-right-radius:  16px;
+    background: linear-gradient(var(--color-blue),var(--color-blue2));
+    left: 0px;
+    transition: .25s ease;
+}
+
+.sidebar ul li:hover::after{
+    width: 4px;
 }
 
 .sidebar ul li img{
-    filter: invert(70%);
+    filter: invert(60%);
     position: relative;
 
 }
@@ -106,9 +115,9 @@ body{
     border-radius: 24px;
     position: relative;
     right: 20px;
-    box-shadow: 0 0 4px rgba(0,0,0,.3);
-    background-color: var(--background-color);
+    background-color: white;
     z-index: -1;
+    border: 2px solid rgba(255,255,255,.1);
 }
 
 
