--- a/src/pages/dashboard-page/style.css
+++ b/src/pages/dashboard-page/style.css
@@ -34,7 +34,7 @@
 body{
     height: 100vh;
     overflow: hidden;
-    background: linear-gradient(135deg,rgba(253, 199, 12, .1),rgba(251, 23, 248, .1));
+    background: linear-gradient(135deg,rgba(253, 199, 12, .3),rgba(251, 23, 248, .3));
     z-index: -1 !important;
     display: flex;
     align-items: center;
@@ -98,7 +98,9 @@ body{
     position: relative;
 
 }
-
+.sidebar ul li svg path{
+    fill: var(--color-blueDark);
+}
 
 .main__dashboard{
     width: 100%;
