--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -43,31 +43,72 @@ body{
 main{
     height: 100%;
     padding: 10px;
+    display: flex;
+    margin: 0;
+    padding: 0;
 }
 
 .sidebar__container{
-    background-color: var(--color-blueDark);
-    width: 70px;
+    width: 100px;
+    border: none;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
     height: 100%;
-    border-radius: 35px;
+    border-radius: 16px;
     padding: 24px;
 }
 
-.sidebar ul li:hover{
-    background-color: rgba(0,0,0,.1);
+.logo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.sidebar ul li img{
-    filter: invert(70%);
-    position: relative;
 
+
+
+.sidebar__buttons ul{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
-.sidebar ul li svg path{
-    fill: var(--color-blueDark);
+
+
+.sidebar__buttons ul li{
+    display: flex;
+    gap: 8px;
+    padding: 12px;
+    background: linear-gradient(90deg, #FF4F81, #FF7DAE);
+    box-shadow: inset 0 0 2px rgba(255,255,255,1);
+    align-items: center;
+    justify-content: center;
+    font-size: .9rem;
+    font-weight: 400;
+    border-radius: .5rem;
 }
+
+
+
+
+.settings ul li{
+    display: flex;
+    gap: 8px;
+    padding: 12px;
+    background: linear-gradient(90deg, #FF4F81, #FF7DAE);
+    box-shadow: inset 0 0 2px rgba(255,255,255,1);
+    align-items: center;
+    justify-content: center;
+    font-size: .9rem;
+    font-weight: 400;
+    border-radius: .5rem;
+}
+
+
+
+
+
 
 .main__dashboard{
     width: 100%;
@@ -80,4 +121,29 @@ main{
     z-index: -1;
 }
 
+svg{
+    stroke: white;
+    stroke-width: 1px;
+}
 
+.user__space{
+    width: 100%;
+    height: 100%;
+}
+
+.profile__container{
+    height: 100%;
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    justify-content: end;
+}
+
+.user__space .profile{
+    width: 500px;
+    height: 100%;
+    display: flex;
+    border-radius: 16px;
+    background: linear-gradient(90deg, #FF4F81, #FF7DAE);
+    box-shadow: inset 0 0 2px rgba(255,255,255,1);
+}
