--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -92,11 +92,9 @@ main{
 }
 
 
-.sidebar__buttons ul li:hover{
+.sidebar__buttons ul li{
     opacity: .9;
-    transform: rotate(-10deg);
 }
-
 
 .sidebar__buttons ul li::before {
     content: "";
@@ -139,10 +137,10 @@ main{
 }
 
 
-.settings ul li:hover{
+.settings ul li{
     opacity: .9;
-    transform: rotate(-10deg);
 }
+
 
 
 .settings ul li::before {
@@ -199,10 +197,31 @@ svg{
 }
 
 .user__space .profile{
-    width: 500px;
-    height: 100%;
+    width: 300px;
+    height: 8%;
     display: flex;
     border-radius: 16px;
-    background: linear-gradient(90deg, #FF4F81, #FF7DAE);
-    box-shadow: inset 0 0 2px rgba(255,255,255,1);
+    justify-content: center;
+    padding: 16px;
+    flex-direction: column;
+    background: white;
+    box-shadow: 0 0 2px 1px rgba(0,0,0,.4);
+}
+
+.profile__img{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+
+.profile .content_container{
+    display: flex;
+}
+
+.username{
+    font-size: 1.4rem;
+    font-family: 'Mona Sans';
+    font-weight: 500;
+    color: #222222;
 }
