--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,7 +36,7 @@ img {
   --color-blue: #36ffff;
   --color-blue2: #007bff;       
   --color-yellow: gold;     
-  --color-blueDark: #0d0c22;
+  --color-blueDark: #212529;
   --color-blueDark2: #0A091B;
   --color-gray: #7b7194;
   --color-green: #70e000;      
@@ -348,7 +348,6 @@ body{
   width: 100%;
   margin-top: 48px;
   height: 100%;
-  gap: 20px;
   display: flex;
   flex-direction: column;
   background-color: transparent;
@@ -368,8 +367,8 @@ body{
 
 
 .box__container .box1{
-  width: 700px;
-  height: 100%;
+  width: 750px;
+  height: 90%;
   background-color: white;
   border-radius: 16px;
   border: 1px solid rgb(224, 224, 224);
@@ -378,7 +377,7 @@ body{
 .box__container .box2{
   width: 700px;
   border-radius: 16px;
-  height: 100%;
+  height: 90%;
   border: 1px solid rgb(224, 224, 224);
   background-color: white;
 }
@@ -386,18 +385,18 @@ body{
 
 .box__container .box3{
   width: 700px;
-  height: 100%;
+  height: 90%;
   background-color: white;
   border-radius: 16px;
   border: 1px solid rgb(224, 224, 224);
 }
 
 .box__container .box4{
-  width: 700px;
+  width: 750px;
   background-color: white;
   border: 1px solid rgb(224, 224, 224);
   border-radius: 16px;
-  height: 100%;
+  height: 90%;
 
 }
 
@@ -407,6 +406,7 @@ body{
   display: flex;
   align-items: center;
   gap: 24px;
+  overflow: hidden;
 }
 
 .box .box__content{
@@ -426,10 +426,34 @@ body{
 }
 
 .box .box__content p{
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-family: 'Mona Sans';
   font-weight: 500;
+  color: var(--color-gray);
 }
+
+.box4{
+  display: flex;
+  gap: 80px;
+}
+
+.box2{
+  display: flex;
+  gap: 60px;
+}
+
+.box3{
+  display: flex;
+  gap: 80px;
+}
+
+.box1{
+  display: flex;
+  gap: 60px;
+}
+
+
+
 
 
 
