--- a/public/css/login.css
+++ b/public/css/login.css
@@ -8,7 +8,7 @@
   --color-blue: #007BFF;
   --color-blue2: #0000ff;       
   --color-yellow: gold;     
-  --color-blueDark: #0d0c22;
+  --color-blueDark: #1a1423;
   --color-blueDark2: #0A091B;
   --link-color: #0969da;
   --color-gray: #7b7194;
