--- a/public/css/main.css
+++ b/public/css/main.css
@@ -178,6 +178,7 @@ body{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  box-shadow: inset 0 0 2px rgba(255,255,255,1);
   will-change: brightness;
   transition: .25s ease;
 }
@@ -198,6 +199,7 @@ body{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  box-shadow: inset 0 0 2px rgba(255,255,255,1);
   will-change: transform, box-shadow; 
   transition: .25s ease;
 }
