--- a/public/css/login.css
+++ b/public/css/login.css
@@ -21,7 +21,7 @@
   --color-electric-yellow: linear-gradient(90deg, #FFF700, #FFD000, #FFB300);
 
   
-  --color-background: white;
+  --color-background: #f9fafb;
   --color-primary: var(--color-blue);
   --color-button: var(--color-yellow);
   --color-success: var(--color-green);
@@ -39,6 +39,7 @@ body{
     display: flex;
     justify-content: center;
     min-height: 100vh;
+    background-color: var(--color-background);
 }
 
 .login__container{
@@ -49,6 +50,7 @@ body{
     flex-direction: column;
     justify-content: center;
     margin-top: 88px;
+
 }
 
 .login__container .logo{
@@ -125,10 +127,10 @@ body{
 
 .btn__signin .btn{
     width: 100%;
-    padding: 12px 16px;
+    padding: 14px 16px;
     border: none;
     font-family: 'Mona Sans';
-    border-radius: 6px;
+    border-radius: 12px;
     font-size: 1rem;
     font-weight: 500;
     font-weight: 600;
@@ -140,4 +142,30 @@ body{
 
 .btn__signin .btn:hover{
     background-color: var(--color-gray);
+}
+
+.create__account{
+    display: flex;
+    margin-top: 16px;
+    align-items: center;
+}
+
+.create__account p{
+    display: flex;
+    gap: 4px;
+    font-family: 'Mona Sans';
+    font-weight: 500;
+    font-size: 0.9rem;
+}
+
+.create__account p a{
+    font-family: 'Mona Sans';
+    color: var(--link-color);
+    font-weight: 400;
+    font-size: 0.9rem;
+    text-decoration: none;
+}
+
+.create__account p a:hover{
+    text-decoration: underline;
 }
