--- a/public/css/main.css
+++ b/public/css/main.css
@@ -160,7 +160,7 @@ body{
 .register__section{
   display: flex;
   justify-content: end;
-  gap: 8px;
+  gap: 12px;
 }
 
 
@@ -174,7 +174,7 @@ body{
   align-items: center;
   font-weight: 500;
   padding: 8px 32px;
-  border-radius: 2.1em;
+  border-radius: 12px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
@@ -195,7 +195,7 @@ body{
   color: white;
   font-weight: 500;
   padding: 8px 32px;
-  border-radius: 2.1em;
+  border-radius: 12px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
@@ -264,10 +264,10 @@ body{
 }
 
 .homepage .homepage__button{
-  font-size: 1.2em;
+  font-size: 1rem;
   margin-top: 26px;
   font-weight: 500;
-  border-radius: 18px;
+  border-radius: 12px;
   display: flex;
   align-items: center;
   justify-content: center;
