--- a/public/css/login.css
+++ b/public/css/login.css
@@ -40,16 +40,18 @@ body{
     justify-content: center;
     min-height: 100vh;
     background-color: var(--color-background);
+    align-items: center;
 }
 
 .login__container{
-    width: 350px;
+    width: 450px;
     height: 350px;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
     margin-top: 88px;
+    margin-bottom: 150px;
 
 }
 
@@ -67,7 +69,7 @@ body{
 }
 
 .login__container .logo h1{
-    font-size: 1.25rem;
+    font-size: 2.5rem;
     font-family: 'Poppins';
     font-weight: 500;
     color: var(--color-blueDark);
@@ -155,6 +157,7 @@ body{
     gap: 4px;
     font-family: 'Mona Sans';
     font-weight: 500;
+    color: var(--color-gray);
     font-size: 0.9rem;
 }
 
