--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -64,14 +64,13 @@
 
 
   .container{
-    display: flex;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
-  .container .signup__poster{
-    height: 100%;
-    width: 50%;
-  }
+
 
   
 
@@ -86,18 +85,16 @@
     justify-content: center;
 }
 
-.container .signup__container .login__link{
-    position: absolute;
-    right: 24px;
-    top: 24px;
-}
 
 .container .signup__container .login__link p{
     font-family: 'Mona Sans';
     font-size: 400;
     font-size: 0.9rem;
     display: flex;
-    gap: 8px;
+    gap: 4px;
+    display: flex;
+    justify-content: center;
+    color: var(--color-gray);
 }
 
 
@@ -109,6 +106,18 @@
     text-decoration: underline;
 }
 
+.container .signup__container .logo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 16px;
+}
+
+.container .signup__container .logo img{
+    height: auto;
+    width: 48px;
+}
+
 .container .signup__form{
     display: flex;
     flex-direction: column;
@@ -118,6 +127,8 @@
 .container .signup__form .title{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 8px;
 }
 
@@ -152,6 +163,11 @@
     padding: 12px 16px;
     border-radius: 6px;
     border: 1px solid rgba(0, 0, 0, .2);
+    transition: 0.2s ease;
+}
+
+.inputs__container .input input:hover{
+    border:  1px solid rgba(0, 0, 0, .3);
 }
 
 
